--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -19,41 +19,36 @@ toc::[]
 [[intro]]
 == Introduction
 
-This document contains the hardware compatibility notes for FreeBSD {localRel}.
-It lists the hardware platforms supported by FreeBSD, as well as the various types of hardware devices (storage controllers, network interfaces, and so on), along with known working instances of these devices.
+This hardware compatibility note describes all hardware known to work with FreeBSD {localRel}.
+Other configurations may also work, but simply have not been tested yet.
+Feedback, updates, and corrections to this list are encouraged!
 
 [[proc]]
-== Supported Processors and System Boards
+== Supported Platforms
 
-This section provides some architecture-specific information about the specific processors and systems that are supported by each architecture.
+This section describes the CPU architectures currently supported by the FreeBSD Platform projects, their support tiers, and the systems that are supported by each Platform.
 
 [[proc-amd64]]
-=== 64-bit x86 (amd64) Architecture Support
+=== x86-64
 
-FreeBSD supports the AMD64 ("Hammer") and Intel(R) EM64T architectures.
-AMD64 (also known as x86-64) is a fully-supported Tier 1 architecture.
-AMD64 supports all modern x86 processors.
+crossref:platforms[amd64,FreeBSD/amd64] supports x86-64 as a fully-supported, crossref:committers-guide[archs,Tier-1] architecture.
+Release media is expected to work on all x86-64 machines with at least 256 MiB of RAM.
 This release incorporates optimizations and enhancements to leverage the full capabilities of FreeBSD/amd64-based systems, delivering improved performance across a wide range of workloads.
 
-[[proc-i386]]
-=== 32-bit x86 (i386) Architecture Support
-
-While FreeBSD continues to evolve and optimize for modern architectures, we are committed to maintaining support for the venerable i386 (x86) architecture in this release.
-Although i386 hardware is becoming less common, FreeBSD remains a reliable and versatile choice for those who still rely on it, whether for legacy systems or specific use cases.
-
 [[proc-arm-64]]
-=== 64-bit ARM (aarch64) Architecture Support
+=== AArch64
 
-FreeBSD supports 64-bit ARM (known as arm64 or AArch64) as a Tier-1 architecture.
+crossref:platforms[arm64,FreeBSD/aarch64] supports 64-bit ARM (ARMv9 and ARMv8) as a crossref:committers-guide[archs,Tier-1] architecture.
 
-FreeBSD currently supports the following devices:
+The following devices are currently supported:
 
 Ampere Computing:
 
+* Altra Max
 * Altra
 * eMAG
 
-Allwinner (64-bit), more info about the support at the link:https://wiki.freebsd.org/arm/Allwinner[Allwinner Wiki page]:
+link:https://wiki.freebsd.org/arm/Allwinner[Allwinner]:
 
 * Allwinner A64 SoC
 * A64-Olinuxino
@@ -75,6 +70,10 @@ AWS / Annapurna Labs:
 * Graviton 2
 * Graviton 3
 
+Cavium:
+
+* ThunderX
+
 NXP Semiconductors:
 
 * LS1028A SoC
@@ -85,15 +84,18 @@ NXP Semiconductors:
 * SolidRun HoneyComb LX2
 * Traverse Technologies Ten64
 
-Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
+link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 
+* Raspberry Pi Zero 2 W
 * Raspberry Pi 3
 * Raspberry Pi 4
 
-RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.org/arm/RockChip[RockChip Wiki page]:
+link:https://wiki.freebsd.org/arm/RockChip[RockChip]:
 
 * RK3328 SoC
 * RK3399 SoC
+* RK3566 SoC
+* RK3568 SoC
 * NanoPC-T4
 * NanoPi R2S
 * NanoPi R2S-Plus
@@ -103,14 +105,18 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 * Rock64
 * RockPro64
 
-Zedboard Zynq 7000 SoC
+Zedboard:
+
+* Zynq 7000 SoC
 
 [[proc-arm-32]]
-=== 32-bit ARM (armv6, armv7) Architecture Support
+=== AArch32
 
-FreeBSD currently supports the following devices:
+crossref:platforms[armv7,FreeBSD/armv7] supports 32-bit ARM (ARM-v7 and up) as a crossref:committers-guide[archs,Tier-2] architecture.
 
-Allwinner (32-bit), more info about the support at the link:https://wiki.freebsd.org/arm/Allwinner[Allwinner Wiki page]:
+The following devices are currently supported:
+
+link:https://wiki.freebsd.org/arm/Allwinner[Allwinner]:
 
 * Allwinner A10 SoC
 * Allwinner A13/R8 SoC
@@ -136,45 +142,67 @@ Allwinner (32-bit), more info about the support at the link:https://wiki.freebsd
 * Orange Pi Zero
 * NanoPI NEO
 
-NXP i.MX6 (32-bit), more info about the support at the link:https://wiki.freebsd.org/arm/imx6[NXP i.MX6 Wiki page]:
+link:https://wiki.freebsd.org/arm/imx6[NXP i.MX6]:
 
 * Wandboard
 * CuBox i
 * HummingBoard
 
-Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
+link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 
-* Raspberry Pi 1
-* Raspberry Pi 2
-* Raspberry Pi Zero
-* RPi Zero W
+* Raspberry Pi 2 (pre v1.2)
+
+[[proc-powerpc]]
+=== POWER
+
+FreeBSD supports 64-bit POWER as a crossref:committers-guide[archs,Tier-2] architecture.
+
+crossref:platforms[powerpc,FreeBSD/powerpc64le] supports 64-bit, bi-endian POWER9 and POWER8, including:
+
+IBM:
+
+* Power System LC922 (POWER9)
+* Power System IC922 (POWER8)
+
+QEMU
+
+* PowerNV
+
+Raptor CS:
+
+* Talos II (POWER9)
+* Blackbird (POWER9)
+
+crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER7 through POWER4, including:
+
+A-EON:
+
+* AmigaONE X5000 (NXP QorIQ P5)
+
+Apple:
+
+* Power Mac G5 (PowerPC 970)
+* Xserve G5 (PowerPC 970)
+
+IBM:
+
+* pSeries VM
 
 [[proc-risc-v]]
-=== RISC-V Architecture Support
+=== RISC-V
 
-RISC-V support in FreeBSD represents a significant milestone in the evolution of this open-source operating system.
+link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] supports 64-bit RISC-V as a crossref:committers-guide[archs,Tier-2] architecture.
+
+RISC-V support represents a significant milestone in the evolution of this open-source operating system.
 FreeBSD was the first operating system to have bootable in-tree support for RISC-V, underscoring its commitment to embracing emerging hardware architectures.
 
 FreeBSD currently supports the following platforms:
 
 * HiFive Unleashed (SiFive FU540)
 * HiFive Unmatched (SiFive FU740)
+* StarFive VisionFive 2 (StarFive JH7110)
 * Spike
 * QEMU
-
-More information about the support at the link:https://wiki.freebsd.org/riscv[RISC-V Wiki page].
-
-[[proc-powerpc]]
-=== PowerPC Architecture Support
-
-Many PowerPC platforms are supported, including but not limited to:
-
-* Apple PowerMac G4 and later.
-* IBM POWER4 and later using pseries VM platform.
-* IBM POWER8 and later bare metal powernv
-** Most development done using Raptor TALOS-II
-* Embedded NXP QorIQ and PowerQUICC III (MPC85XX, Pxxx)
-** Tested on AmigaOne X5000 and AmigaOne A1222
 
 // The "Supported Devices" section of the release notes.
 // Generally processor-independent, with conditional text
@@ -205,13 +233,9 @@ Many PowerPC platforms are supported, including but not limited to:
 [[support]]
 == Supported Devices
 
-This section describes the devices currently known to be supported by FreeBSD.
-Other configurations may also work, but simply have not been tested yet.
-Feedback, updates, and corrections to this list are encouraged.
-
-Where possible, the drivers applicable to each device or class of devices is listed.
+This section describes the devices currently known to be supported by each device driver in FreeBSD.
 If the driver in question has a manual page in the FreeBSD base distribution (most should), it is referenced here.
-Information on specific models of supported devices, controllers, etc. can be found in the manual pages.
+Information on usage, configuration, and specific models of supported devices, controllers, etc. can be found in the manual pages.
 
 [NOTE]
 ====
@@ -222,12 +246,11 @@ This means that some devices, which are supported by multiple drivers, may appea
 [[disk]]
 === Disk Controllers
 
-[amd64, i386] IDE/ATA controllers (man:ata[4] driver)
 
-
-Controllers supported by the
+The
 **aac**
-driver include:
+driver supports the following Parallel SCSI, SATA, and 3G SAS
+RAID controllers from the Adaptec AAC family:
 
 *	Adaptec AAC-364
 *	Adaptec RAID 2045
@@ -333,16 +356,9 @@ driver include:
 
 
 
-
-
-
 The
 **ahc**
-driver supports the following
-`SCSI`
-host adapter chips and
-`SCSI`
-controller cards:
+driver supports the following VL/ISA/PCI parallel SCSI controllers and cards:
 
 *	Adaptec
 	`AIC7770`
@@ -485,7 +501,7 @@ device.
 
 The
 **ahd**
-driver supports the following:
+driver supports the following PCI/PCI-X parallel SCSI controllers:
 
 *	Adaptec
 	`AIC7901`
@@ -505,8 +521,6 @@ driver supports the following:
 *	Many motherboards with on-board
 	`SCSI`
 	support
-
-
 
 
 
@@ -559,7 +573,9 @@ driver supports the following cards:
 
 
 
-The currently supported ATA/SATA controller chips are:
+The
+**ata**
+driver supports the IDE interface on the following ATA/SATA controllers:
 
 Acard:
 
@@ -663,7 +679,6 @@ not known what the chipset can do and how to program it.
 
 
 
-
 Controllers supported by the
 **ciss**
 driver include:
@@ -707,13 +722,11 @@ driver include:
 *	HP Modular Smart Array 500 (MSA500)
 
 
-
 [NOTE]
 ====
 [amd64, i386] Booting from these controllers is supported.
 EISA adapters are not supported.
 ====
-
 
 
 The
@@ -822,7 +835,6 @@ driver:
 
 
 
-
 Controllers supported by the
 **ips**
 driver include:
@@ -913,6 +925,11 @@ EISA adapters are not supported.
 ====
 
 
+The
+**mmcsd**
+driver implements direct access block device for MMC and SD memory cards.
+
+
 
 These controllers are supported by the
 **mpi3mr**
@@ -931,9 +948,9 @@ driver:
 
 
 
-These controllers are supported by the
+The
 **mpr**
-driver:
+driver supports the following SATA/SAS/NVMe RAID controllers:
 
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3004 (4 Port SAS)
 *	Broadcom Ltd./Avago Tech (LSI) SAS 3008 (8 Port SAS)
@@ -1045,29 +1062,31 @@ can take on - no separate compilation is required.
 
 The
 **mrsas**
-driver supports the following hardware:
+driver supports the following LSI/Broadcom SATA/SAS RAID controllers:
 
-\[ Thunderbolt 6Gb/s MR controller ]
-
-*	LSI MegaRAID SAS 9265
-*	LSI MegaRAID SAS 9266
-*	LSI MegaRAID SAS 9267
-*	LSI MegaRAID SAS 9270
-*	LSI MegaRAID SAS 9271
-*	LSI MegaRAID SAS 9272
-*	LSI MegaRAID SAS 9285
-*	LSI MegaRAID SAS 9286
-*	DELL PERC H810
-*	DELL PERC H710/P
-
-\[ Invader/Fury 12Gb/s MR controller ]
-
-*	LSI MegaRAID SAS 9380
-*	LSI MegaRAID SAS 9361
-*	LSI MegaRAID SAS 9341
-*	DELL PERC H830
-*	DELL PERC H730/P
-*	DELL PERC H330
+	Controller               Chip            Speed  
+	Broadcom SAS3916         Aero            12Gb/s  
+	Broadcom SAS3908         Aero            12Gb/s  
+	LSI MegaRAID SAS 9380    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9361    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9341    Invader/Fury    12Gb/s  
+	LSI MegaRAID SAS 9286    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9285    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9272    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9271    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9270    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9267    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9266    Thunderbolt     6Gb/s  
+	LSI MegaRAID SAS 9265    Thunderbolt     6Gb/s  
+	LSI SAS 3108                             12Gb/s  
+	LSI SAS 3008                             12Gb/s  
+	LSI SAS 2308                             6Gb/s  
+	LSI SAS 2208                             6Gb/s  
+	DELL PERC H830           Invader/Fury    12Gb/s  
+	DELL PERC H810           Thunderbolt     6Gb/s  
+	DELL PERC H730/P         Invader/Fury    12Gb/s  
+	DELL PERC H710/P         Thunderbolt     6Gb/s  
+	DELL PERC H330           Invader/Fury    12Gb/s
 
 
 
@@ -1103,11 +1122,8 @@ ATAPI and non-DMA ATA commands executed one by one for each port.
 
 
 
-
-
-
 The
-**ocs\_fc**
+**ocs_fc**
 driver supports these Fibre Channel adapters:
 
 Emulex 16/8G FC GEN 5 HBAS
@@ -1192,7 +1208,6 @@ driver include, but not limited to:
 
 
 
-
 The
 **sym**
 driver provides support for the following Symbios/LSI Logic PCI SCSI
@@ -1232,14 +1247,18 @@ one of the following add-on boards:
 
 
 
-
-
 The
 **tws**
 driver supports the following SATA/SAS RAID controller:
 
 *	LSI's 3ware SAS 9750 series
 
+
+
+The
+**ufshci**
+driver supports both host controllers and devices implementing the
+Universal Flash Storage Host Controller Interface 4.1 and earlier.
 
 
 With all supported SCSI controllers, full support is provided for SCSI-I, SCSI-II, and SCSI-III peripherals, including hard disks, optical disks, tape drives (including DAT, 8mm Exabyte, Mammoth, and DLT), medium changers, processor target devices and CD-ROM drives.
@@ -1322,13 +1341,12 @@ device driver provides support for the following Ethernet controllers:
 
 
 
-
 The
 **aue**
 driver supports the following USB Fast Ethernet adapters based on the
 ADMtek AN986 Pegasus chipset:
 
-*	Abocom UFE1000, DSB650TX\_NA
+*	Abocom UFE1000, DSB650TX_NA
 *	Accton USB320-EC, SpeedStream
 *	ADMtek AN986, AN8511
 *	Billionton USB100, USB100LP, USB100EL, USBE100
@@ -1366,10 +1384,10 @@ AX88172:
 *	Billionton SnapPort
 *	Billionton USB2AR
 *	Buffalo (Melco Inc.) LUA-U2-KTX
-*	Corega USB2\_TX
+*	Corega USB2_TX
 *	D-Link DUBE100
 *	Goodway GWUSB2E
-*	JVC MP\_PRX1
+*	JVC MP_PRX1
 *	LinkSys USB200M
 *	Netgear FA120
 *	Sitecom LN-029
@@ -1407,7 +1425,15 @@ AX88760:
 *	ASIX AX88760
 
 
-ASIX Electronics AX88178A/AX88179 USB Gigabit Ethernet adapters (man:axge[4] driver)
+
+The
+**axge**
+driver supports the following USB Gigabit Ethernet controllers:
+
+*	ASIX Electronics AX88179A
+*	ASIX Electronics AX88179
+*	ASIX Electronics AX88178A
+
 
 
 The
@@ -1441,7 +1467,7 @@ following:
 *	HP NC382m DP 1GbE Multifunction BL-c Adapter
 
 
-[amd64, i386] Broadcom BCM4401 based Fast Ethernet adapters (man:bfe[4] driver)
+The man:bfe[4] driver supports Broadcom BCM4401-based Fast Ethernet devices.
 
 
 The
@@ -1739,7 +1765,6 @@ driver at this time:
 
 
 
-
 Gigabit Ethernet controllers built into the following Freescale
 system-on-chip devices are known to work with the
 **dtsec**
@@ -1752,7 +1777,6 @@ Additionally, the following devices are expected to work, but are untested:
 
 *	P4080, P4040
 *	P5040
-
 
 
 
@@ -1793,7 +1817,7 @@ controller chips:
 *	Intel PRO/1000 XT Server Adapter (82544)
 
 
-FreeBSD kernel driver for Elastic Network Adapter (ENA) family (man:ena[4] driver)
+The man:ena[4] driver supports the AWS EC2 Elastic Network Adapter.
 
 
 The
@@ -1802,7 +1826,12 @@ driver should supports all known Cisco VIC cards.
 
 
 
-Agere ET1310 Gigabit Ethernet adapters (man:et[4] driver)
+
+The
+**et**
+driver supports Agere ET1310 10/100/Gigabit
+Ethernet adapters.
+
 
 
 
@@ -1854,7 +1883,7 @@ The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC
 The
 **ice**
 driver supports the Intel Ethernet 800 series.
-Most adapters in this series with SFP28/QSFP28 cages
+Some adapters in this series with SFP28/QSFP28 cages
 have firmware that requires that Intel qualified modules are used; these
 qualified modules are listed below.
 This qualification check cannot be disabled by the driver.
@@ -2489,7 +2518,7 @@ driver automatically switches the device from
 "Zero-CD"
 mode to modem mode.
 This behavior can be disabled by setting
-*hw.usb.uhso.auto\_switch*
+*hw.usb.uhso.auto_switch*
 to 0 using
 sysctl(8).
 
@@ -2591,6 +2620,14 @@ driver supports this modem.
 The man:adm6996fc[4] driver supports the Infineon ADM6996FC Fast Ethernet switch controller.
 
 
+The
+**ar40xx_switch**
+driver supports the following Gigabit Ethernet switch controllers:
+
+*	Qualcomm IPQ 4019 Five-port Gigabit Ethernet Switch
+*	Qualcomm IPQ 4018 Five-port Gigabit Ethernet Switch
+
+
 
 The
 **arswitch**
@@ -2670,7 +2707,7 @@ except those that are based on the AR5005VL chipset.
 
 
 The following cards are among those supported by the
-**ath\_hal**
+**ath_hal**
 module:
 
 	*Card*               Chip      Bus        Standard  
@@ -2957,6 +2994,22 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 
 The
+**mtw**
+driver supports MediaTek MT7601U based USB wireless network adapters
+including (but not all of them tested):
+
+*	ASUS USB-N10 v2
+*	D-Link DWA-127 rev B1
+*	Edimax EW-7711UAn v2
+*	Foxconn WFU03
+*	Tenda U2
+*	Tenda W311MI v2
+*	TP-LINK TL-WN727N v4 (tested working)
+*	Yealink WF40
+
+
+
+The
 **otus**
 driver provides support for Atheros AR9170 USB IEEE 802.11b/g/n
 wireless network adapters, including:
@@ -3126,7 +3179,7 @@ driver supports PCIe devices with the following chipsets:
 
 
 The
-**rtwn\_pci**
+**rtwn_pci**
 driver supports the following PCIe Wi-Fi devices:
 
 *	Realtek 802.11n wireless 8188  (RTL8188EE)
@@ -3135,7 +3188,7 @@ driver supports the following PCIe Wi-Fi devices:
 
 
 The
-**rtwn\_usb**
+**rtwn_usb**
 driver supports USB wireless network adapters based on certain
 Realtek RTL 8188/8192/8812 and 8821 chipsets, including:
 
@@ -3668,6 +3721,7 @@ PCI/PCIe multi-port serial and parallel adapters:
 *	Sunix SUN1889/1888 PCI dual port serial
 *	Sunix SER5xxxx 8/4/2 port serial
 *	Syba Tech Ltd PCI-4S2P-550-ECP
+*	Systembase SB16C1054/8 4/8 port serial
 *	Titan PCI-800H/PCI-200H
 *	VScom:
 
@@ -3928,9 +3982,8 @@ driver supports the following adapters:
 === Sound Devices
 
 
-
 The
-**snd\_als4000**
+**snd_als4000**
 driver supports the following sound cards:
 
 *	Avance Logic ALS4000
@@ -3938,7 +3991,7 @@ driver supports the following sound cards:
 
 
 The
-**snd\_atiixp**
+**snd_atiixp**
 driver supports the following audio chipsets:
 
 *	ATI IXP 200
@@ -3948,7 +4001,7 @@ driver supports the following audio chipsets:
 
 
 The
-**snd\_cmi**
+**snd_cmi**
 driver supports the following sound cards:
 
 *	CMedia CMI8338A
@@ -3959,7 +4012,7 @@ driver supports the following sound cards:
 
 
 The
-**snd\_cs4281**
+**snd_cs4281**
 driver supports the following sound cards:
 
 *	Crystal Semiconductor CS4281
@@ -3967,7 +4020,7 @@ driver supports the following sound cards:
 
 
 The
-**snd\_csa**
+**snd_csa**
 driver supports the following sound cards:
 
 *	Crystal Semiconductor CS4280
@@ -3986,14 +4039,13 @@ Some onboard CS4610 chips are accompanied by the CS423x ISA codec
 instead of the CS4297 AC97 codec.
 Such configurations are not
 supported by the
-**snd\_csa**
+**snd_csa**
 driver yet.
 
 
 
-
 The
-**snd\_emu10k1**
+**snd_emu10k1**
 driver supports the following sound cards:
 
 *	Creative SoundBlaster Live! (EMU10K1 Chipset)
@@ -4004,7 +4056,7 @@ driver supports the following sound cards:
 
 
 The
-**snd\_emu10kx**
+**snd_emu10kx**
 driver supports the following sound cards:
 
 *	Creative Sound Blaster Live! (EMU10K1 Chipset).
@@ -4021,7 +4073,7 @@ driver supports the following sound cards:
 	There is no MIDI support for this card.
 
 The
-**snd\_emu10kx**
+**snd_emu10kx**
 driver does
 *not*
 support the following sound cards (although they have names
@@ -4041,7 +4093,7 @@ similar to some supported ones):
 
 
 The
-**snd\_envy24**
+**snd_envy24**
 driver supports the following audio devices:
 
 *	M-Audio Audiophile 2496
@@ -4054,7 +4106,7 @@ Recording and other features of these cards are not supported.
 
 
 The
-**snd\_envy24ht**
+**snd_envy24ht**
 driver supports the following audio devices:
 
 *	Audiotrak Prodigy 7.1
@@ -4078,7 +4130,7 @@ Recording and other features of these cards are not supported.
 
 
 The
-**snd\_es137x**
+**snd_es137x**
 driver supports the following sound cards:
 
 *	Creative CT5880-A
@@ -4095,18 +4147,16 @@ driver supports the following sound cards:
 
 
 
-
 The
-**snd\_fm801**
+**snd_fm801**
 driver supports audio devices based on the following chipset:
 
 *	Forte Media FM801
 
 
 
-
 The
-**snd\_hda**
+**snd_hda**
 driver supports PCI class 04h
 (multimedia),
 subclass 03h
@@ -4117,7 +4167,7 @@ Intel High Definition Audio 1.0 specification.
 
 
 The
-**snd\_hdspe**
+**snd_hdspe**
 driver supports the following audio devices:
 
 *	RME HDSPe AIO (optional AO4S-192 and AI4S-192 extension boards)
@@ -4136,7 +4186,7 @@ be mapped to ADAT channels and vice versa.
 
 
 The
-**snd\_ich**
+**snd_ich**
 driver supports the following audio devices:
 
 *	AMD 768
@@ -4160,9 +4210,8 @@ driver supports the following audio devices:
 
 
 
-
 The
-**snd\_maestro3**
+**snd_maestro3**
 driver supports the following audio devices:
 
 *	ESS Technology Allegro-1
@@ -4170,9 +4219,8 @@ driver supports the following audio devices:
 
 
 
-
 The
-**snd\_neomagic**
+**snd_neomagic**
 driver supports the following audio devices:
 
 *	NeoMagic 256AV
@@ -4180,9 +4228,8 @@ driver supports the following audio devices:
 
 
 
-
 The
-**snd\_solo**
+**snd_solo**
 driver supports the following sound cards:
 
 *	ESS Solo-1 (ES1938 Chipset)
@@ -4191,7 +4238,7 @@ driver supports the following sound cards:
 
 
 The
-**snd\_spicds**
+**snd_spicds**
 driver supports the following codecs:
 
 *	AK4358
@@ -4204,7 +4251,7 @@ driver supports the following codecs:
 
 
 The
-**snd\_t4dwave**
+**snd_t4dwave**
 driver supports the following audio devices:
 
 *	Acer Labs M5451
@@ -4215,7 +4262,14 @@ driver supports the following audio devices:
 
 
 The
-**snd\_via8233**
+**snd_uaudio**
+driver provides support for USB audio class devices and
+USB MIDI class devices.
+
+
+
+The
+**snd_via8233**
 driver supports the following audio chipsets:
 
 *	VIA VT8233
@@ -4228,7 +4282,7 @@ driver supports the following audio chipsets:
 
 
 The
-**snd\_via82c686**
+**snd_via82c686**
 driver supports audio devices based on the following chipset:
 
 *	VIA 82C686A
@@ -4236,11 +4290,10 @@ driver supports audio devices based on the following chipset:
 
 
 The
-**snd\_vibes**
+**snd_vibes**
 driver supports audio devices based on the following chipset:
 
 *	S3 SonicVibes
-
 
 
 [[usb]]
@@ -4259,8 +4312,6 @@ USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wla
 
 USB serial interfaces can be found in <<serial,Serial Interfaces>>.
 ====
-
-Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 
 
 The
@@ -4333,6 +4384,8 @@ driver include:
 *	Apple PowerBook Trackpad
 
 
+The man:ehci[4] driver supports USB 2.0 controllers implementing the Enhanced Host Controller Interface standard.
+
 
 The
 **ohci**
@@ -4382,7 +4435,15 @@ driver supports the following iPAQ devices:
 *	Most Windows CE based phones
 
 
-[amd64, i386] USB 2.0 controllers using the EHCI interface (man:ehci[4] driver)
+
+The
+**umass**
+driver supports USB Mass Storage devices such as:
+
+*	USB thumb drives
+*	USB hard disk drives
+*	USB floppy drives
+
 
 [amd64, i386] Hubs
 
@@ -4461,8 +4522,6 @@ driver supports the following adapters:
 *	Magic Control Technology USB-232
 *	Sitecom USB-232
 
-
-[amd64, i386] Audio Devices (man:uaudio[4] driver)
 
 
 The
@@ -4546,9 +4605,8 @@ The driver supports the following IEEE 1394 OHCI chipsets:
 === Bluetooth Devices
 
 
-
 The
-**ng\_ubt**
+**ng_ubt**
 driver supports all Bluetooth USB devices that conform with
 the Bluetooth specification v1.1, including:
 
@@ -4821,14 +4879,14 @@ driver provides support for the following devices:
 
 
 The current version of the
-**netfpga10g\_nf10bmac**
+**netfpga10g_nf10bmac**
 driver works with one PIO mode interface of the
 NetFPGA-10G Embedded CPU Ethernet Core version 1.00a.
 
 
 
 The following PLX/Avago/Broadcom chips are supported by the
-**ntb\_hw\_plx**
+**ntb_hw_plx**
 driver:
 
 *	PEX 8713
@@ -4842,7 +4900,7 @@ driver:
 
 
 The
-**ow\_temp**
+**ow_temp**
 driver supports the following temperature sensors:
 
 	DS1820     1-Wire Digital Thermometer  
@@ -4892,4 +4950,10 @@ formerly known as Winbond, and ITE, namely:
 *	Winbond 83667HG/HG-B
 *	Winbond 83687THF
 *	Winbond 83697HF/UG
+
+
+
+The
+**u2f**
+driver supports FIDO/U2F-compatible USB security keys.
 
