Complete the steps for a new committer.
Accepted by: carlavilla, maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D52837

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1470,6 +1470,9 @@ include::{include-path}emax.key[]
 === `{oshogbo}`
 include::{include-path}oshogbo.key[]
 
+=== `{andy}`
+include::{include-path}andy.key[]
+
 === `{riggs}`
 include::{include-path}riggs.key[]
 
